--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Dominik Oesterle",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "cors": "^2.8.0"
   }
 }
